[index.html] updated index.html with Google replica

--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
 	<p><a href="https://github.com/Valentin162/Projects">GitHub account</a></p>
+
+	<h1>Projects</h1>
+	<h2>Replicas</h2>
+	<ul>
+		<li><a href="./website_copies/google/">Google</a></li>
+	</ul>
 </body>
 </html>
